# hand_sign_game-

./: .gitignore  CMakeLists.txt  README.md
src/: Game.h  Player.cpp  Player.h  game.cpp  main.cpp  utiliti.h
